# delegate

./: Cargo.toml
src/: cli.rs  main.rs  store.rs
