[package]
name = "delegate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "delegate"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
home = "0.5.9"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rusqlite = "0.31.0"
sysinfo = "0.30.12"
tempfile = "3.10.1"
